--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "./bin/utils": "./bin/utils.js",
     "./bin/callback": "./bin/callback.js",
     ".": {
+      "types": "./dist/src/y-websocket.d.ts",
       "import": "./src/y-websocket.js",
       "require": "./dist/y-websocket.cjs"
     }
